[gd_scene load_steps=7 format=3 uid="uid://bfyv54tw65x76"]

[ext_resource type="Script" path="res://Shop Interface.gd" id="1_mvw0m"]
[ext_resource type="Texture2D" uid="uid://breain1bb04m3" path="res://sprites/rod1.png" id="2_fmyqd"]
[ext_resource type="Texture2D" uid="uid://drtnhllgrkmxs" path="res://sprites/rod2.png" id="3_pgkn0"]
[ext_resource type="Texture2D" uid="uid://cwedf4hev3xcd" path="res://sprites/rod3.png" id="4_mygoo"]
[ext_resource type="Texture2D" uid="uid://c6w0na83i7vrj" path="res://sprites/money conversion rate.png" id="5_brpjm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tapw0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fmyqd")
}, {
"duration": 1.0,
"texture": ExtResource("3_pgkn0")
}, {
"duration": 1.0,
"texture": ExtResource("4_mygoo")
}],
"loop": true,
"name": &"speedanim",
"speed": 5.0
}]

[node name="Shop Interface" type="StaticBody2D"]
script = ExtResource("1_mvw0m")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 136.0
offset_bottom = 51.0
color = Color(0.478431, 0.286275, 0, 1)

[node name="Sell Button" type="Button" parent="."]
texture_filter = 1
offset_left = 5.0
offset_top = 4.0
offset_right = 45.0
offset_bottom = 35.0
text = "Sell"

[node name="icon" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(84, 19)
scale = Vector2(1.625, 1.625)
sprite_frames = SubResource("SpriteFrames_tapw0")
animation = &"speedanim"

[node name="Speed Button" type="Button" parent="."]
offset_left = 71.0
offset_top = 5.0
offset_right = 98.0
offset_bottom = 33.0

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(117.5, 18.5)
scale = Vector2(1.6875, 1.6875)
texture = ExtResource("5_brpjm")

[node name="Conversion Button" type="Button" parent="."]
offset_left = 104.0
offset_top = 5.0
offset_right = 131.0
offset_bottom = 33.0

[node name="Speed Price" type="Label" parent="."]
offset_left = 71.0
offset_top = 35.0
offset_right = 111.0
offset_bottom = 58.0
scale = Vector2(0.680001, 0.56)
horizontal_alignment = 1

[node name="Convert Price" type="Label" parent="."]
offset_left = 104.0
offset_top = 35.0
offset_right = 144.0
offset_bottom = 58.0
scale = Vector2(0.680001, 0.56)
horizontal_alignment = 1

[connection signal="pressed" from="Sell Button" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="Speed Button" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="Conversion Button" to="." method="_on_conversion_button_pressed"]
